# sync-primitives

./: .clang-tidy  CMakeLists.txt  LICENSE
include/sync/: mutex.hpp
tests/: CMakeLists.txt
tests/src/: test_custom_type.cc  test_stl_containers.cc
